# wxChess

./: CMakeLists.txt  README.md  TODO  build.sh
include/: App.h  Frame.h  MenuBar.h  Piece.h  Scoreboard.h  StartMenu.h  Taskbar.h  Tile.h  UpdateTimer.h
src/: App.cpp  Frame.cpp  MenuBar.cpp  Piece.cpp  Scoreboard.cpp  StartMenu.cpp  Taskbar.cpp  Tile.cpp  UpdateTimer.cpp
